dark mode fix

--- a/common/nav.css
+++ b/common/nav.css
@@ -46,9 +46,13 @@
   font-size: 20px;
 }
 
-.sidebar li .icon,
 .sidebar li .text {
   color: var(--text-color);
+  transition: var(--tran-02);
+}
+
+.sidebar li .icon{
+  color: var(--button-color);
   transition: var(--tran-02);
 }
 
@@ -78,7 +82,7 @@ header .welcome-text .header-text {
   transform: translateY(-50%) rotate(180deg);
   height: 25px;
   width: 25px;
-  background: var(--primary-color-light);
+  background: var(--toggle-color);
   display: flex;
   align-items: center;
   justify-content: center;
