--- a/common/style.css
+++ b/common/style.css
@@ -35,10 +35,12 @@
   --hr-color: #f1f1f1;
   --stock-table-text: #000000;
   --background-grey: #f0efef;
+  --actionbar-color: #e9e9e9;
   --stock-lv1: #feffd6;
   --stock-lv2: #fff8b8;
   --stock-lv3: #caf2c2;
   --stock-lv4: #ffd6c9;
+
 
   /* --stock-lv1: #fbffcc;
   --stock-lv2: #ffe0e0;
@@ -58,7 +60,7 @@ body {
 }
 
 body.dark {
-  --body-color: #18191a;
+  /* --body-color: #18191a;
   --sidebar-color: #242526;
   --primary-color: #ccc;
   --primary-color-light: #7e7e7e;
@@ -81,7 +83,38 @@ body.dark {
   --stock-lv1: #cf970a;
   --stock-lv2: #79a519;
   --stock-lv3: #527d2e;
+  --stock-lv4: #bb3737; */
+
+    --body-color: #242526;
+    --sidebar-color: #18191a;
+    --primary-color: #ccc;
+    --primary-color-light: #7e7e7e;
+    --toggle-color: #9d9387;
+  --text-color: #ccc;
+  --shadow-color: rgb(57, 57, 57);
+  --box-shadow: rgb(50, 45, 42);
+  --wtext--color: #ccc;
+  --th-color: #575450;
+  --table-color-hover: #343434;
+  --tbicon-color: #ccc;
+  --input-border: #a9a9a9;
+  --label-selected: #ccc;
+  --button-color: #7e613d;
+  --button-hover: #363535;
+  --sidebar-color-text: #7e7e7e;
+  --stock-table-text: #ffffff;
+  --pending-color: #9a7748;
+  --hr-color: #6a6a6a;
+  --actionbar-color: #45423e;
+  --mode-color: #45423e;
+  --stock-lv1: #cf970a;
+  --stock-lv2: #79a519;
+  --stock-lv3: #527d2e;
   --stock-lv4: #bb3737;
+
+
+
+
 
   color: var(--text-color);
 }
@@ -233,7 +266,7 @@ body.dark {
 
 .w-icon span {
   font-size: 2rem;
-  color: var(--text-color);
+  color: var(--pending-color);
 }
 
 .w-title {
@@ -297,6 +330,10 @@ body.dark {
 
 .table-heading {
   width: 87%;
+}
+
+.req-tables .table-heading{
+  width: 100%;
 }
 
 .status {
@@ -500,7 +537,7 @@ body.dark {
 }
 
 .overview-tables .icon {
-  color: var(--tbicon-color);
+  color: var(--pending-color);
   font-size: 18px;
 }
 
@@ -625,7 +662,7 @@ body.dark {
   justify-content: space-between;
   align-items: center;
   border: 1px solid var(--box-shadow);
-  background-color: var(--th-color);
+  background-color: var(--actionbar-color);
 }
 
 .action-bar .action-text {
