--- a/distributor/user-flow.css
+++ b/distributor/user-flow.css
@@ -15,6 +15,7 @@ input {
   border: none;
   border-bottom: 1px solid #a9a9a9;
   color: #484848;
+  background-color: var(--body-color);
   padding: 7px 0;
   margin: 20px 0 0 0;
   font-size: 15px;
